feat(game): added createView

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -25,7 +25,12 @@
         <div class="profile__about">
           <h3>About</h3>
           <p>
-            {{player.bio}}
+            Name: {{player.first_name}}
+          </p>
+          <p>
+            Surename: {{player.last_name}}
+          </p><p>
+            Birthdate: {{player.birth_date}}
           </p>
         </div>
       </div>
