--- a/templates/users/update-user.html
+++ b/templates/users/update-user.html
@@ -25,6 +25,7 @@
                     {% for field in form %}
                     <div class="form__group">
                         <label for="{{field.label}}">{{field.label}}</label>
+                        {{ field.errors }}
                         {{field}}
                     </div>
                     {% endfor %}
