--- a/templates/game/game_list.html
+++ b/templates/game/game_list.html
@@ -1,7 +1,7 @@
 {%for game in games%}
 <div class="roomListRoom">
     <div class="roomListRoom__header">
-        <a href="{% url 'profile' game.host.id %}" class="roomListRoom__author">
+        <a href="{% url 'profile' pk=game.id%}"  class="roomListRoom__author">
             <div class="avatar avatar--small">
                 <img src="{{game.host.avatar.url}}"/>
             </div>
@@ -12,14 +12,14 @@
         </div>
     </div>
     <div class="roomListRoom__content">
-        <a href="{%url 'game' pk=game.id%}">Game at {{game.stadium.address}}</a>
+        <a href="{%url 'game' pk=game.id%}">Game at: {{game.stadium.address}}</a>
         <p>{{game.stadium.address}}</p>
         <p>{{game.max_players}}</p>
         <p>{{game.game_date}}</p>
         <p>{{game.price}}</p>
     </div>
     <div class="roomListRoom__meta">
-        <a href="room.html" class="roomListRoom__joined">
+        <a href="{% url 'game' pk=game.id%}" class="roomListRoom__joined">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                  viewBox="0 0 32 32">
                 <title>user-group</title>
