--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -88,7 +88,92 @@
                         {%endif%}
                     </form>
                 </div>
+                <div class="game__activities scroll">
+                    {%for act in actions%}
+                    {#{% for i in '0123456789'|make_list %}#}
+                    <div class="thread">
+                        <div class="thread__top">
+                            <div class="thread__author">
+                                <a href="{% url 'profile' pk=act.user.id %}" class="thread__authorInfo">
+                                    <div class="avatar avatar--small">
+                                        <img src="{{act.user.avatar.url}}"/>
+                                    </div>
+                                    <span>@{{act.user.username}}</span>
+                                    <!--                                        <span>@{{message.user.username}}</span>-->
+                                    <!--                                    <span>{{ forloop.counter }}</span>-->
+                                </a>
+                                <!--                                    <span class="thread__date">{{message.created|timesince}} ago</span>-->
+
+
+                            </div>
+                            <div class="thread__details">
+                                <span>{{act.verb}} </span>
+                            </div>
+                            <div><span>{{act.created|timesince}} ago</span></div>
+
+                            {# {% if request.user == message.user %}#}
+                            <a href="">
+                                <div class="thread__delete">
+                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                         viewBox="0 0 32 32">
+                                        <title>remove</title>
+                                        <path
+                                                d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">
+                                        </path>
+                                    </svg>
+                                </div>
+                            </a>
+                            {#{% endif %}#}
+                        </div>
+
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
+            <!--                <div class="room__conversation">-->
+            <!--                    <div class="threads scroll">-->
+            <!--                        {% for i in '0123456789'|make_list %}-->
+
+
+            <!--                        {# {% for message in room_messages %}#}-->
+            <!--                                    <div class="thread">-->
+            <!--                                        <div class="thread__top">-->
+            <!--                                            <div class="thread__author">-->
+            <!--                                                <a href="{% url 'profile' 1 %}" class="thread__authorInfo">-->
+            <!--                                                    <div class="avatar avatar&#45;&#45;small">-->
+            <!--                                                        <img src="{{request.user.avatar.url}}"/>-->
+            <!--                                                    </div>-->
+            <!--                                                    &lt;!&ndash;                    <span>@{{message.user.username}}</span>&ndash;&gt;-->
+            <!--                                                    &lt;!&ndash;                                        <span>@{{message.user.username}}</span>&ndash;&gt;-->
+            <!--                                                    <span>{{ forloop.counter }}</span>-->
+            <!--                                                </a>-->
+            <!--                                                &lt;!&ndash;                                    <span class="thread__date">{{message.created|timesince}} ago</span>&ndash;&gt;-->
+            <!--                                                <span class="thread__date">{{ forloop.counter }} ago</span>-->
+            <!--                                            </div>-->
+
+            <!--                                            {# {% if request.user == message.user %}#}-->
+            <!--                                            <a href="">-->
+            <!--                                                <div class="thread__delete">-->
+            <!--                                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"-->
+            <!--                                                         viewBox="0 0 32 32">-->
+            <!--                                                        <title>remove</title>-->
+            <!--                                                        <path-->
+            <!--                                                                d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">-->
+            <!--                                                        </path>-->
+            <!--                                                    </svg>-->
+            <!--                                                </div>-->
+            <!--                                            </a>-->
+            <!--                                            {#{% endif %}#}-->
+            <!--                                        </div>-->
+            <!--                                        <div class="thread__details">-->
+            <!--                                            {{message.body}}-->
+            <!--                                            {{ forloop.counter }}-->
+            <!--                                        </div>-->
+            <!--                                    </div>-->
+            <!--                                    {% endfor %}-->
+            <!--                    </div>-->
+            <!--                </div>-->
+            <!--            </div>-->
             <!--                <div class="room__header scroll">-->
             <!--                    <div class="room__info">-->
             <!--                        <h3>Game at: {{game.stadium.address}}</h3>-->
@@ -113,49 +198,49 @@
 
             <!--                </div>-->
 
-            <!--                <div class="room__conversation">-->
-            <!--                    <div class="threads scroll">-->
-            <!--                        {% for i in '0123456789'|make_list %}-->
+            <!--                            <div class="room__conversation">-->
+            <!--                                <div class="threads scroll">-->
+            <!--                                    {% for i in '0123456789'|make_list %}-->
 
 
-            <!--                        {# {% for message in room_messages %}#}-->
-            <!--                        <div class="thread">-->
-            <!--                            <div class="thread__top">-->
-            <!--                                <div class="thread__author">-->
-            <!--                                    <a href="{% url 'profile' 1 %}" class="thread__authorInfo">-->
-            <!--                                        <div class="avatar avatar&#45;&#45;small">-->
-            <!--                                            <img src="{{request.user.avatar.url}}"/>-->
+            <!--                                    {# {% for message in room_messages %}#}-->
+            <!--                                    <div class="thread">-->
+            <!--                                        <div class="thread__top">-->
+            <!--                                            <div class="thread__author">-->
+            <!--                                                <a href="{% url 'profile' 1 %}" class="thread__authorInfo">-->
+            <!--                                                    <div class="avatar avatar&#45;&#45;small">-->
+            <!--                                                        <img src="{{request.user.avatar.url}}"/>-->
+            <!--                                                    </div>-->
+            <!--                                                    &lt;!&ndash;                    <span>@{{message.user.username}}</span>&ndash;&gt;-->
+            <!--                                                    &lt;!&ndash;                                        <span>@{{message.user.username}}</span>&ndash;&gt;-->
+            <!--                                                    <span>{{ forloop.counter }}</span>-->
+            <!--                                                </a>-->
+            <!--                                                &lt;!&ndash;                                    <span class="thread__date">{{message.created|timesince}} ago</span>&ndash;&gt;-->
+            <!--                                                <span class="thread__date">{{ forloop.counter }} ago</span>-->
+            <!--                                            </div>-->
+
+            <!--                                            {# {% if request.user == message.user %}#}-->
+            <!--                                            <a href="">-->
+            <!--                                                <div class="thread__delete">-->
+            <!--                                                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"-->
+            <!--                                                         viewBox="0 0 32 32">-->
+            <!--                                                        <title>remove</title>-->
+            <!--                                                        <path-->
+            <!--                                                                d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">-->
+            <!--                                                        </path>-->
+            <!--                                                    </svg>-->
+            <!--                                                </div>-->
+            <!--                                            </a>-->
+            <!--                                            {#{% endif %}#}-->
             <!--                                        </div>-->
-            <!--                                        &lt;!&ndash;                    <span>@{{message.user.username}}</span>&ndash;&gt;-->
-            <!--                                        &lt;!&ndash;                                        <span>@{{message.user.username}}</span>&ndash;&gt;-->
-            <!--                                        <span>{{ forloop.counter }}</span>-->
-            <!--                                    </a>-->
-            <!--                                    &lt;!&ndash;                                    <span class="thread__date">{{message.created|timesince}} ago</span>&ndash;&gt;-->
-            <!--                                    <span class="thread__date">{{ forloop.counter }} ago</span>-->
-            <!--                                </div>-->
-
-            <!--                                {# {% if request.user == message.user %}#}-->
-            <!--                                <a href="">-->
-            <!--                                    <div class="thread__delete">-->
-            <!--                                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"-->
-            <!--                                             viewBox="0 0 32 32">-->
-            <!--                                            <title>remove</title>-->
-            <!--                                            <path-->
-            <!--                                                    d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">-->
-            <!--                                            </path>-->
-            <!--                                        </svg>-->
+            <!--                                        <div class="thread__details">-->
+            <!--                                            {{message.body}}-->
+            <!--                                            {{ forloop.counter }}-->
+            <!--                                        </div>-->
             <!--                                    </div>-->
-            <!--                                </a>-->
-            <!--                                {#{% endif %}#}-->
+            <!--                                    {% endfor %}-->
+            <!--                                </div>-->
             <!--                            </div>-->
-            <!--                            <div class="thread__details">-->
-            <!--                                {{message.body}}-->
-            <!--                                {{ forloop.counter }}-->
-            <!--                            </div>-->
-            <!--                        </div>-->
-            <!--                        {% endfor %}-->
-            <!--                    </div>-->
-            <!--                </div>-->
 
             <!--            </div>-->
             <!--                        <div class="room__message">-->
